Metaflow & Sagemaker working on 'make build'

--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def extract_module_only(package_module_name):\n",
+    "    module_name = package_module_name\n",
+    "    if \".\" in module_name:\n",
+    "        package_name, module_name = module_name.split(\".\")\n",
+    "    return module_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pkg_module_name = \"test.module\"\n",
+    "module_name = \"module\"\n",
+    "path_sep_module_name = module_name.replace(\".\", \"/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert \"module\" == extract_module_only(module_name)\n",
+    "assert \"module\" == extract_module_only(pkg_module_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +461,7 @@
        "  '    return one')]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,16 +536,10 @@
     "# )\n",
     "# nx.write_gml(dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.gml\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
