--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -30,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,17 +39,13 @@
     "from sciflow.data_handler import extract_param_meta\n",
     "from sciflow.packaging import determine_dependencies\n",
     "from sciflow.params import params_as_dict\n",
-    "from sciflow.parse_module import FuncDetails, extract_return_var_names, extract_steps\n",
-    "from sciflow.utils import get_flow_path, lib_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sciflow.to_metaflow import extract_module_only, indent_multiline, titleize"
+    "from sciflow.parse_module import (\n",
+    "    FuncDetails,\n",
+    "    extract_module_only,\n",
+    "    extract_return_var_names,\n",
+    "    extract_steps,\n",
+    ")\n",
+    "from sciflow.utils import get_flow_path, indent_multiline, lib_path, titleize"
    ]
   },
   {
@@ -77,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +94,7 @@
        "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_multistep.py')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,6 +262,8 @@
     "    proc_instance_type = \"ml.m5.xlarge\"\n",
     "    train_image_uri = \"368653567616.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-training-custom:conda-env-training\"\n",
     "    train_instance_type = \"ml.m5.xlarge\"\n",
+    "\n",
+    "    config = get_config()\n",
     "\n",
     "    with open(flow_path, \"w\") as flow_file:\n",
     "        flow_file.write(\"#!/usr/bin/env python\\n\")\n",
@@ -341,10 +330,12 @@
     "        flow_file.write(f\"\\n\\nclass {pipeline_class_name}():\\n\")\n",
     "        ind = \"    \"\n",
     "        write_params(flow_file, param_meta, ind)\n",
-    "        \n",
+    "\n",
     "        flow_file.write(f\"{ind}args = []\\n\")\n",
-    "        flow_file.write(f\"{ind}param_types = {dict(zip(param_meta.keys(), [v.instance_type.__name__ for v in param_meta.values()]))}\\n\")\n",
-    "    \n",
+    "        flow_file.write(\n",
+    "            f\"{ind}param_types = {dict(zip(param_meta.keys(), [v.instance_type.__name__ for v in param_meta.values()]))}\\n\"\n",
+    "        )\n",
+    "\n",
     "        flow_file.write(\"\\n\")\n",
     "        flow_file.write(f\"{ind}steps = {[s.name for s in steps]}\\n\")\n",
     "        flow_file.write(\"\\n\")\n",
@@ -364,19 +355,31 @@
     "            track_experiment,\n",
     "        )\n",
     "        flow_file.write(\"\\n\")\n",
-    "        \n",
+    "\n",
     "        flow_file.write(f\"{ind}def set_run_params(self):\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}for arg_key, arg_val in self.args.items():\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}for param in self.param_types.keys():\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}{ind}if arg_key.strip('-') == param:\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}if self.param_types[param] == 'int':\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterInteger(name=param, default_value=int(arg_val)))\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}elif self.param_types[param] == 'float':\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterFloat(name=param, default_value=float(arg_val)))\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}elif self.param_types[param] == 'str':\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterString(name=param, default_value=arg_val))\\n\")\n",
+    "        flow_file.write(\n",
+    "            f\"{ind}{ind}{ind}{ind}{ind}if self.param_types[param] == 'int':\\n\"\n",
+    "        )\n",
+    "        flow_file.write(\n",
+    "            f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterInteger(name=param, default_value=int(arg_val)))\\n\"\n",
+    "        )\n",
+    "        flow_file.write(\n",
+    "            f\"{ind}{ind}{ind}{ind}{ind}elif self.param_types[param] == 'float':\\n\"\n",
+    "        )\n",
+    "        flow_file.write(\n",
+    "            f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterFloat(name=param, default_value=float(arg_val)))\\n\"\n",
+    "        )\n",
+    "        flow_file.write(\n",
+    "            f\"{ind}{ind}{ind}{ind}{ind}elif self.param_types[param] == 'str':\\n\"\n",
+    "        )\n",
+    "        flow_file.write(\n",
+    "            f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterString(name=param, default_value=arg_val))\\n\"\n",
+    "        )\n",
     "        flow_file.write(\"\\n\")\n",
-    "        \n",
+    "\n",
     "        flow_file.write(f\"{ind}def get_pipeline(self) -> Pipeline:\\n\")\n",
     "        flow_file.write(\n",
     "            f\"{ind}{ind}pipeline_steps = [getattr(self, step)() for step in self.steps]\\n\"\n",
@@ -384,7 +387,7 @@
     "        flow_file.write(f\"{ind}{ind}if len(self.args) > 0:\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}self.set_run_params()\\n\")\n",
     "        flow_file.write(\"\\n\")\n",
-    "        \n",
+    "\n",
     "        flow_file.write(f\"{ind}{ind}pipeline = Pipeline(\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}name=self.flow_name,\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}parameters=[\\n\")\n",
@@ -483,16 +486,17 @@
     "        flow_file.write(f\"{ind}{ind}{ind}flow = {pipeline_class_name}()\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}if len(sys.argv[2:]) > 0:\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}{ind}args = sys.argv[2:]\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{ind}flow.args = dict(list(zip(args, args[1:]))[::2])\\n\")\n",
+    "        flow_file.write(\n",
+    "            f\"{ind}{ind}{ind}{ind}flow.args = dict(list(zip(args, args[1:]))[::2])\\n\"\n",
+    "        )\n",
     "        flow_file.write(f\"{ind}{ind}{ind}flow.run()\\n\")\n",
-    "        \n",
     "\n",
     "        return steps_param_meta, steps_vars"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,10 +1227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def write_preamble(step, sm_module_file, ind):\n",
     "    sm_module_file.write(\"\\n\")\n",
     "    sm_module_file.write(\n",
@@ -1298,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1417,7 @@
       "Created sagemaker module: _sciflow_test_module_first.py\n",
       "No params cell found for: test_multistep_no_params.ipynb\n",
       "Sagemaker conversion failed for test_multistep_no_params.ipynb, \n",
-      "Reason: Step: preprocess depends on variable(s), \"{'model_level', 'traffic_percent', 'min_date'}\", which are not in the flow scope\n",
+      "Reason: Step: preprocess depends on variable(s), \"{'min_date', 'model_level', 'traffic_percent'}\", which are not in the flow scope\n",
       "Sagemaker conversion failed for test_data_handling.ipynb, \n",
       "Reason: Unsupported parameter type for sagemaker pipeline: ParamMeta(instance_type=<class 'dict'>, is_scalar=False, is_json_type=True, persist_type='pickle', has_metaflow_param=True, has_sagemaker_param=False)\n"
      ]
