--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,6 @@
     "import ast\n",
     "import os\n",
     "from pathlib import Path\n",
-    "from itertools import islice\n",
     "\n",
     "import nbformat\n",
     "import pandas as pd\n",
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +51,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Code-gen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def indent_multiline(multiline_text, indent=1):\n",
+    "    lines = multiline_text.strip().split(\"\\n\")\n",
+    "    spaces = \"\".join([\"    \" for _ in range(indent)])\n",
+    "    for i in range(len(lines)):\n",
+    "        prefix = spaces if i > 0 else spaces + '\"\"\"'\n",
+    "        lines[i] = prefix + lines[i]\n",
+    "    return \"\\n\".join(lines) + '\"\"\"'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"\"\"\n",
+    "Some text\n",
+    ":param param: text\n",
+    "\"\"\"\n",
+    "assert '    \"\"\"Some text\\n    :param param: text\"\"\"' == indent_multiline(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def titleize(name):\n",
+    "    return name.title().replace(\"_\", \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert titleize(\"snake_case\") == \"SnakeCase\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Collections"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +133,7 @@
     "def chunks(lst, n):\n",
     "    \"\"\"Yield successive n-sized chunks from lst.\"\"\"\n",
     "    for i in range(0, len(lst), n):\n",
-    "        yield lst[i:i + n]"
+    "        yield lst[i : i + n]"
    ]
   },
   {
@@ -79,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,15 +345,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 29.9 ms, sys: 1.94 ms, total: 31.9 ms\n",
-      "Wall time: 214 ms\n"
+      "CPU times: user 30.2 ms, sys: 0 ns, total: 30.2 ms\n",
+      "Wall time: 192 ms\n"
      ]
     }
    ],
@@ -299,15 +365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.82 ms, sys: 1.31 ms, total: 5.13 ms\n",
-      "Wall time: 78.9 ms\n"
+      "CPU times: user 3.94 ms, sys: 0 ns, total: 3.94 ms\n",
+      "Wall time: 63.7 ms\n"
      ]
     },
     {
@@ -334,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
