--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,30 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "import asyncio\n",
-    "import multiprocessing\n",
     "import os\n",
-    "import subprocess\n",
-    "import sys\n",
-    "from itertools import product\n",
     "from pathlib import Path, PosixPath\n",
-    "from typing import Any, Dict, Iterable\n",
+    "from typing import Iterable\n",
     "\n",
-    "import pandas as pd\n",
     "from fastcore.script import Param, call_parse\n",
     "from nbdev.export import find_default_export, get_config, nbglob, read_nb\n",
     "\n",
     "from sciflow.data_handler import extract_param_meta\n",
     "from sciflow.params import params_as_dict\n",
-    "from sciflow.parse_module import FuncDetails, extract_steps\n",
-    "from sciflow.utils import get_flow_path, prepare_env"
+    "from sciflow.parse_module import FuncDetails, extract_module_only, extract_steps\n",
+    "from sciflow.utils import get_flow_path, indent_multiline, prepare_env, titleize"
    ]
   },
   {
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,29 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def titleize(name):\n",
-    "    return name.title().replace(\"_\", \"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert titleize(\"snake_case\") == \"SnakeCase\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,38 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def indent_multiline(multiline_text, indent=1):\n",
-    "    lines = multiline_text.strip().split(\"\\n\")\n",
-    "    spaces = \"\".join([\"    \" for _ in range(indent)])\n",
-    "    for i in range(len(lines)):\n",
-    "        prefix = spaces if i > 0 else spaces + '\"\"\"'\n",
-    "        lines[i] = prefix + lines[i]\n",
-    "    return \"\\n\".join(lines) + '\"\"\"'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = \"\"\"\n",
-    "Some text\n",
-    ":param param: text\n",
-    "\"\"\"\n",
-    "assert '    \"\"\"Some text\\n    :param param: text\"\"\"' == indent_multiline(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,44 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pkg_module_name = \"test.module\"\n",
-    "module_name = \"module\"\n",
-    "path_sep_module_name = module_name.replace(\".\", \"/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def extract_module_only(package_module_name):\n",
-    "    module_name = package_module_name\n",
-    "    if \".\" in module_name:\n",
-    "        package_name, module_name = module_name.split(\".\")\n",
-    "    return module_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert \"module\" == extract_module_only(module_name)\n",
-    "assert \"module\" == extract_module_only(pkg_module_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
