--- a/nbs/clean.ipynb
+++ b/nbs/clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,24 +19,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
+    "import io\n",
     "import json\n",
     "from pathlib import Path\n",
     "\n",
+    "import nbdev\n",
     "from fastcore.script import Param, bool_arg, call_parse\n",
     "from fastcore.utils import ifnone\n",
-    "from nbdev.clean import rm_execution_count\n",
-    "from nbdev.export import nbglob"
+    "from nbdev.clean import nb_metadata_keep, rm_execution_count\n",
+    "from nbdev.export import nbglob, read_nb\n",
+    "\n",
+    "from sciflow.params import find_params_cell"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +67,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def clean_nb(nb, clear_all=False):\n",
+    "    \"Clean `nb` from superfluous metadata, passing `clear_all` to `clean_cell`\"\n",
+    "    for c in nb[\"cells\"]:\n",
+    "        clean_cell(c, clear_all=clear_all)\n",
+    "    nb[\"metadata\"] = {k: v for k, v in nb[\"metadata\"].items() if k in nb_metadata_keep}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,26 +139,34 @@
     "def sciflow_clean():\n",
     "    sciflow_clean_nbs()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_path = Path(Path(\".\").resolve(), \"test\", \"test_export.ipynb\")\n",
+    "nb = read_nb(Path(nb_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(find_params_cell(nb)) == 1\n",
+    "clean_nb(nb)\n",
+    "assert len(find_params_cell(nb)) == 1"
+   ]
   }
  ],
  "metadata": {
-  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "python3 (conda-env/4)",
    "language": "python",
    "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/conda-env/4"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.10"
   }
  },
  "nbformat": 4,
