--- a/nbs/test/test_module.ipynb
+++ b/nbs/test/test_module.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "# default_exp test.test_module"
@@ -12,11 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
@@ -104,21 +104,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:sciflow]",
+   "display_name": "sciflow (sciflow/3)",
    "language": "python",
-   "name": "conda-env-sciflow-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
   }
  },
  "nbformat": 4,
